fix: Challenge 1: vertical spacing,font-size,hover
* Vertical Spacing was messed up because the Aspect Ratio
of my browser's Mobile view window was bad. Once I fixed
the AR of Mobile View, I had to fix the vertical spacing
again.
* Fixed Vertical spacing
* Tried some hover. Not perfect. Yet!

--- a/1-huddle-landing-page-with-a-single-introductory-section/Solution/styles.css
+++ b/1-huddle-landing-page-with-a-single-introductory-section/Solution/styles.css
@@ -13,13 +13,13 @@ main {
 }
 
 #heroimage {
-    width: 50%;
-    height: 50%;
+    max-width: 80%;
+    height: auto;
 }
 
 article {
     color: white;
-    font-size: 2rem;
+    font-size: 1.2rem;
     text-align: center;
 }
 
@@ -53,6 +53,6 @@ article p {
     color: white;
 }
 
-footer {
-    /* color: white; */
+.social-button i:hover {
+    color: hsl(300, 69%, 71%);
 }
